--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^7.0.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "lucide-react": "^0.484.0",
